2005-08-22  Devashish Sharma <sdevashish@novell.com>

	* gui/widgets/eab-contact-compare.c (match_email_hostname): This
	function was never returning true and the comparison was also not
	proper. Fixed this.

2005-08-17  Devashish Sharma <sdevashish@novell.com>

	*  gui/merging/eab-contact-compare.c (use_common_book_cb): When
	adding/modifying a contact list there is no need to check if the emails
	in the list are there in existing contact lists or contacts. Also there
	is no need for comparing EContactName in case of contact list. Added a 
	condition to check this.
	(eab_contact_compare): Added a check to skip email comparison in case
	of contact list.
	Fixes #312554.

2005-08-17  Devashish Sharma <sdevashish@novell.com>

	* gui/merging/eab-contact-compare.c (eab_contact_compare): Add an email
	which is not there in any contact to a contact list, now if you want
	to add a contact with that email id it gives you duplicate detected. So
	while checking for duplicates when adding a new contact emails should
	not be compared with existing contact lists email.

2005-08-17  Devashish Sharma <sdevashish@novell.com>

	*  gui/merging/eab-contact-merging.c (response): If the Duplicate
	Contact Detected Dialog is closed by clicking the cross on the dialog
	window the contact-list-editor or contact-editor dialog become unusable
	and cant be closed. Added a case for catching GTK_RESPONSE_DELETE_EVENT.

2005-08-17  Devashish Sharma <sdevashish@novell.com>

	* gui/merging/eab-contact-duplicate-detected.glade: In case of a 
	duplicate contact list if the list is big the Cancel and Add buttons of
	the Duplicate Contact Detected Dialog were going out of the screen 
	scope. Added a scrollbar to the Dialog to fix this problem.

2005-08-17  Tor Lillqvist  <tml@novell.com>

	* gui/widgets/Makefile.am (libeabwidgets_la_SOURCES): Add
	eab-popup.c back which apparently was accidentally removed.

2005-08-15  Christian Kellner  <gicmo@gnome.org>
